--- a/test-output/old/masterSuite/classes.html
+++ b/test-output/old/masterSuite/classes.html
@@ -3,4 +3,32 @@
 <th>Class name</th>
 <th>Method name</th>
 <th>Groups</th>
-</tr></table>
+</tr><tr>
+<td>testCases.TC_009_ProductAdvanceSearchTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyProductAdvanceSearch</td>
+<td>Master Sanity </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>Master Sanity Regression E2E </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+</table>
