--- a/test-output/old/masterSuite/groups.html
+++ b/test-output/old/masterSuite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Master</td><td>TC_009_ProductAdvanceSearchTest.verifyProductAdvanceSearch()[pri:1, instance:testCases.TC_009_ProductAdvanceSearchTest@35cabb2a]<br/></td></tr>
+<tr><td>Sanity</td><td>TC_009_ProductAdvanceSearchTest.verifyProductAdvanceSearch()[pri:1, instance:testCases.TC_009_ProductAdvanceSearchTest@35cabb2a]<br/></td></tr>
+</table>
